# Trabajo-final-MateDiscreta

./: .gitignore  CMakeLists.txt  LICENSE  MatrizBooleana.h  README.md  archivodot.dot  instalar.bat  instalar.sh  main.c  makefile  script.sh
imagenes/: .gitkeep
libs/: matriz_boolena.h
src/: src.c
src/libs/: CMakeLists.txt  estructuras_graficas.h  eventos.c  eventos.h  interfaz_grafica.c  interfaz_grafica.h  matriz_booleana.c  matriz_booleana.h  utils.c  utils.h
